--- a/2_Investigate_FBI_NICS_Firearm_Background_Check/investigate-a-dataset-template.html
+++ b/2_Investigate_FBI_NICS_Firearm_Background_Check/investigate-a-dataset-template.html
@@ -19550,11 +19550,26 @@ Name: 18, dtype: object</pre>
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>Overall the gun registration increased from 1998 to 2017. Kentucky has the highest growth in gun 
-registration followed by the countries Texas and California</p>
+<p>🌟 Overall the gun registration increased from 1998 to 2017. Kentucky has the highest growth in gun 
+registration followed by the countries Texas and California. With the current data we could make further analysis such as difference between women and men, foreigner and US citizen, veterans and not veterans and household income.</p>
+<h4 id="Limitations">Limitations<a class="anchor-link" href="#Limitations">&#182;</a></h4><p>To perform a complete analysis, data on crime statistics in our dataset for the respective states would be helpful to find out whether, for example, criminal phenomena such as robbery and murder have decreased or increased due to the high gun permits. Another question to answer is why gun permits are higher in Kentucky or other top 10 states than in other states. If crime phenomena like murder and robbery were higher in the states, then the FBI could focus more on these states to fight the criminals. One could also use data on the size of organised crime and gang members in the states.
+Overall, we need more data to get more information.</p>
 
 </div>
 </div>
+</div>
+<div class="cell border-box-sizing code_cell rendered">
+<div class="input">
+<div class="prompt input_prompt">In&nbsp;[&nbsp;]:</div>
+<div class="inner_cell">
+    <div class="input_area">
+<div class=" highlight hl-ipython3"><pre><span></span> 
+</pre></div>
+
+    </div>
+</div>
+</div>
+
 </div>
     </div>
   </div>
